replaced comment with internal_comment, made allocation more robust when no option can be found

--- a/templates/reservations_template.html
+++ b/templates/reservations_template.html
@@ -52,7 +52,7 @@
                         Name: {{ res['name'] }}
                     </div>
                     <div>
-                        Notiz: {{ res['comment'] }}
+                        Notiz: {{ res['internal_comment'] }}
                     </div>
                 </div>
             {% endfor %}
