--- a/templates/location_template.html
+++ b/templates/location_template.html
@@ -1,18 +1,42 @@
 <html>
     <head>
-        <title>Saalbelegung</title>
+        <title>Saalbelegung {{ event }}</title>
         <meta charset="utf-8">
         <style>
+            /* --- GENERAL A4 LANDSCAPE SETTINGS --- */
+            @page {
+                size: A4 landscape;
+                margin: 0.5cm;
+            }
+            
+            @media print {
+            
+                /* Remove unnecessary colors for cleaner printing */
+                body {
+                    -webkit-print-color-adjust: exact;
+                    print-color-adjust: exact;
+                    font-family: Arial, sans-serif;
+                }
+            
+                /* Each block starts on a new page */
+                #block_1, #block_2, #block_3 {
+                    page-break-after: always;
+                }
+                #block_1 { page-break-before: none; } /* first page does not break */
+            }
+            
+            /* Keep your normal screen styles outside of @media print */
+           
             .flex-container {
               display: flex;
               flex-wrap: nowrap;
-              background-color: DodgerBlue;
+              background-color: white;
             }
 
             .flex-container > div {
               background-color: #f1f1f1;
-              width: 18%;
-              margin: 0.3rem;
+              width: 19%;
+              margin: 0.4rem;
               text-align: center;
               line-height: 1.5em;
               font-size: 0.8em;
@@ -27,10 +51,10 @@
             }
             
             .seat > div {
-                background-color: #add8e6;
+                background-color: #dddddd;
                 margin: 0.3rem;
                 padding: 0.3rem;
-                border: 2px solid #add8e6;
+                border: 2px solid black;
                 height: 4.5rem;
             }
             
@@ -162,10 +186,10 @@
             }
             
             function mouseOut(event) {
-                event.currentTarget.style.border = "2px solid #add8e6";
+                event.currentTarget.style.border = "2px solid black";
                 const resnr = event.currentTarget.className.split(' ')[1];
                 document.querySelectorAll('div.'+CSS.escape(resnr)).forEach((seat) => {
-                    seat.style.border = "2px solid #add8e6";
+                    seat.style.border = "2px solid black";
                 });
             }
             
